feat: thin scrollbar, fix resize hand;le

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -154,4 +154,9 @@
     scrollbar-width: none;
     /* Firefox */
   }
+
+  .thin-scrollbar {
+    scrollbar-width: thin;
+    border: none;
+  }
 }
