feat: playground feedback WIP

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -59,6 +59,9 @@
     --destructive: 0 60% 50%;
     --destructive-foreground: 210 40% 98%;
 
+    --success: 142.1 76.2% 36.3%;
+    --success-foreground: 355.7 100% 97.3%;
+
     --border: 240 6% 18%;
     --input: 240 6% 18%;
     --ring: 212 96% 78%;
@@ -108,6 +111,9 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
+    --success: 142.1 76.2% 36.3%;
+    --success-foreground: 355.7 100% 97.3%;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
