feat: cross browser size of inputs

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -91,6 +91,10 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+    &[type='number'] {
+     -moz-appearance: textfield
+    }
 }
 
 @layer base {
